# OSY_LAB

./: README.md
OS_Lab1/: CMakeLists.txt
OS_Lab1/lab1/: CMakeLists.txt  main.cpp
OS_Lab1/lab1/include/: parent.hpp
OS_Lab1/lab1/src/: child.cpp  parent.cpp
OS_Lab1/tests/: CMakeLists.txt  lab1_test.cpp
OS_Lab3/: CMakeLists.txt
OS_Lab3/lab3/: CMakeLists.txt  main.cpp
OS_Lab3/lab3/include/: parent.hpp  utils.hpp
OS_Lab3/lab3/src/: child.cpp  parent.cpp  utils.cpp
OS_Lab3/tests/: CMakeLists.txt  lab3_test.cpp
