cmake_minimum_required(VERSION 3.22.1)

include(FetchContent)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG        release-1.11.0
)

FetchContent_MakeAvailable(googletest)
add_library(GTest::GTest INTERFACE IMPORTED)
target_link_libraries(GTest::GTest INTERFACE gtest_main)

add_executable(lab1_test ../lab1/src/parent.cpp lab1_test.cpp)
target_include_directories(lab1_test PRIVATE ../lab1/include)

target_link_libraries(lab1_test PRIVATE GTest::GTest)